[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GameTemplate/Tests/GlobalTimerTest.gd" type="Script" id=1]
[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_16.tres" type="DynamicFont" id=2]

[node name="GlobalTimerTest" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.423529, 0.423529, 0.423529, 1 )

[node name="WhiteBack" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 9.0
margin_right = -160.0
margin_bottom = -9.0

[node name="TextInput" type="TextEdit" parent="CanvasLayer/WhiteBack"]
margin_left = 82.0
margin_top = 111.0
margin_right = 140.0
margin_bottom = 132.0
text = "Tic Toc"

[node name="Text" type="Label" parent="CanvasLayer/WhiteBack"]
margin_left = 7.0
margin_top = 13.0
margin_right = 75.0
margin_bottom = 151.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time

Autostart

Oneshot

Message"

[node name="AutoStartInput" type="CheckBox" parent="CanvasLayer/WhiteBack"]
margin_left = 100.0
margin_top = 43.0
margin_right = 124.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( -311, -57 )

[node name="OneshotInput" type="CheckBox" parent="CanvasLayer/WhiteBack"]
margin_left = 99.0
margin_top = 76.0
margin_right = 123.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -311, -57 )

[node name="TimeInput" type="SpinBox" parent="CanvasLayer/WhiteBack"]
margin_left = 75.0
margin_top = 10.0
margin_right = 149.0
margin_bottom = 34.0

[node name="AddButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = -82.0
margin_right = 76.0
margin_bottom = -42.0
custom_fonts/font = ExtResource( 2 )
text = "add"

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 85.0
margin_top = -45.0
margin_right = 154.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 2 )
text = "start"

[node name="StopButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = 3.0
margin_right = 76.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "stop"

[node name="DeleteButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 83.0
margin_top = 38.0
margin_right = 154.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
text = "delete"
